# vibe-radar

./: .cache  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTES_FROM_TELEGRAM.md  PROJECT_STATUS.md  nixpacks.toml  pyproject.toml
.github/workflows/: evening-prompt.yml  weekly-review.yml
docs/: branding-decisions.md  feature-backlog.md  research-brand.md  research-taste-card.md  validation-decisions.md
migrations/: 001_initial_schema.sql  002_cities_rls.sql
scripts/: build_dj_seed_list.py  generate_card_backgrounds.py  generate_dj_seed_cards.py  generate_v3_cards.py  hetzner-bootstrap.sh  run_match.py  scrape_event_artists.py  scrape_madrid_ig.py  test_monday_drop.py
src/: config.py  models.py
src/analytics/: soundcloud.py  taste_dna.py
src/api/: README.md  approval_tokens.py  auth.py  deps.py  main.py  monday_drop.py  scan.py  scheduler.py
src/cards/: composer.py  generator.py  renderer.py
src/cards/templates/: all-cards.html  cross_genre.html  dancefloor.html  scene_city.html  taste_dna.html  taste_tribe.html
src/collectors/: dj_profiles.py  soundcloud.py  spotify.py
src/collectors/events/: bandsintown.py  instagram_parser.py  resident_advisor.py  songkick.py
src/data/: dj_profiles.json  dj_taste_vectors.json  madrid_ig_accounts.yaml
src/db/: supabase.py
src/integrations/: brevo.py  instagram.py
src/matching/: dj_event.py  dj_twin.py  exact.py  vibe.py
src/visualization/: taste_profile.py
src/web/templates/: analysis.html  connect.html  datenschutz.html  impressum.html  index.html  login.html  pending.html
src/web/templates/emails/: monday_drop.html
tests/: test_instagram_event_parser.py
tests/api/: test_scan.py  test_votes.py
